...
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    tools:context=".MatchActivity">

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/submit_session_name_button"
        android:layout_width="180dp"
        android:layout_height="50dp"
        android:layout_marginTop="220dp"
        android:background="@color/white"
        android:backgroundTint="@color/white"
        android:onClick="onStopPopupSubmitSessionNameClicked"
...
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints,TextContrastCheck" />

    <EditText
        android:id="@+id/session_name_input_view"
        android:layout_width="280dp"
        android:layout_height="50dp"
        android:layout_marginTop="100dp"
        android:autofillHints=""
        android:background="@null"
        android:ems="10"
...
